@@ -1,19 +1,4 @@
-/*
- * Copyright 2002-2021 the original author or authors.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package org.springframework.samples.petclinic.vets.web;
+package org.springframework.samples.petclinic.visits.web;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -21,98 +6,121 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
-import org.springframework.samples.petclinic.vets.model.Specialty;
-import org.springframework.samples.petclinic.vets.model.Vet;
-import org.springframework.samples.petclinic.vets.model.VetRepository;
+import org.springframework.samples.petclinic.visits.model.Visit;
+import org.springframework.samples.petclinic.visits.model.VisitRepository;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
-
+import static org.mockito.Mockito.verify;
+import static java.util.Arrays.asList;
 import static org.mockito.BDDMockito.given;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-/**
- * @author Maciej Szarlinski
- */
 @ExtendWith(SpringExtension.class)
-@WebMvcTest(VetResource.class)
+@WebMvcTest(VisitResource.class)
 @ActiveProfiles("test")
-class VetResourceTest {
+class VisitResourceTest {
 
     @Autowired
     MockMvc mvc;
 
     @MockBean
-    VetRepository vetRepository;
+    VisitRepository visitRepository;
 
     @Test
-    void shouldGetAListOfVets() throws Exception {
-        Vet vet = new Vet();
-        vet.setId(1);
-        vet.setFirstName("James");
-        vet.setLastName("Carter");
+    void shouldFetchVisits() throws Exception {
+        given(visitRepository.findByPetIdIn(asList(111, 222)))
+            .willReturn(
+                asList(
+                    Visit.VisitBuilder.aVisit()
+                        .id(1)
+                        .petId(111)
+                        .build(),
+                    Visit.VisitBuilder.aVisit()
+                        .id(2)
+                        .petId(222)
+                        .build(),
+                    Visit.VisitBuilder.aVisit()
+                        .id(3)
+                        .petId(222)
+                        .build()
+                )
+            );
 
-        Specialty specialty = new Specialty();
-        specialty.setId(1);
-        specialty.setName("radiology");
-        vet.addSpecialty(specialty);
-
-        given(vetRepository.findAll()).willReturn(Arrays.asList(vet));
-
-        mvc.perform(get("/vets").accept(MediaType.APPLICATION_JSON))
+        mvc.perform(get("/pets/visits?petId=111,222"))
             .andExpect(status().isOk())
-            .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-            .andExpect(jsonPath("$[0].id").value(1))
-            .andExpect(jsonPath("$[0].firstName").value("James"))
-            .andExpect(jsonPath("$[0].lastName").value("Carter"))
-            .andExpect(jsonPath("$[0].specialties[0].id").value(1))
-            .andExpect(jsonPath("$[0].specialties[0].name").value("radiology"));
+            .andExpect(jsonPath("$.items[0].id").value(1))
+            .andExpect(jsonPath("$.items[1].id").value(2))
+            .andExpect(jsonPath("$.items[2].id").value(3))
+            .andExpect(jsonPath("$.items[0].petId").value(111))
+            .andExpect(jsonPath("$.items[1].petId").value(222))
+            .andExpect(jsonPath("$.items[2].petId").value(222));
     }
 
     @Test
-    void shouldGetEmptyListOfVets() throws Exception {
-        given(vetRepository.findAll()).willReturn(Arrays.asList());
+    void shouldReturnEmptyListWhenNoVisitsFound() throws Exception {
+        // Given
+        given(visitRepository.findByPetIdIn(asList(999))).willReturn(List.of());
 
-        mvc.perform(get("/vets").accept(MediaType.APPLICATION_JSON))
+        // When/Then
+        mvc.perform(get("/pets/visits?petId=999"))
             .andExpect(status().isOk())
-            .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-            .andExpect(jsonPath("$").isArray())
-            .andExpect(jsonPath("$").isEmpty());
+            .andExpect(jsonPath("$.items").isEmpty()); // Expect an empty array
     }
 
     @Test
-    void shouldGetVetsWithMultipleSpecialties() throws Exception {
-        Vet vet = new Vet();
-        vet.setId(1);
-        vet.setFirstName("Linda");
-        vet.setLastName("Douglas");
+    void shouldFetchVisitsForSinglePet() throws Exception {
+        // Given
+        given(visitRepository.findByPetIdIn(asList(123)))
+            .willReturn(
+                asList(
+                    Visit.VisitBuilder.aVisit()
+                        .id(5)
+                        .petId(123)
+                        .build()
+                )
+            );
 
-        Specialty surgery = new Specialty();
-        surgery.setId(2);
-        surgery.setName("surgery");
-        vet.addSpecialty(surgery);
-
-        Specialty dentistry = new Specialty();
-        dentistry.setId(3);
-        dentistry.setName("dentistry");
-        vet.addSpecialty(dentistry);
-
-        given(vetRepository.findAll()).willReturn(Arrays.asList(vet));
-
-        mvc.perform(get("/vets").accept(MediaType.APPLICATION_JSON))
+        // When/Then
+        mvc.perform(get("/pets/visits?petId=123"))
             .andExpect(status().isOk())
-            .andExpect(content().contentType(MediaType.APPLICATION_JSON))
-            .andExpect(jsonPath("$[0].id").value(1))
-            .andExpect(jsonPath("$[0].firstName").value("Linda"))
-            .andExpect(jsonPath("$[0].lastName").value("Douglas"))
-            .andExpect(jsonPath("$[0].specialties").isArray())
-            .andExpect(jsonPath("$[0].specialties.length()").value(2))
-            .andExpect(jsonPath("$[0].specialties[0].name").value("surgery"))
-            .andExpect(jsonPath("$[0].specialties[1].name").value("dentistry"));
+            .andExpect(jsonPath("$.items[0].id").value(5))
+            .andExpect(jsonPath("$.items[0].petId").value(123));
+    }
+
+    @Test
+    void shouldHandleInvalidPetIdFormat() throws Exception {
+        // When/Then
+        mvc.perform(get("/pets/visits?petId=invalid"))
+            .andExpect(status().isBadRequest()); // Expect HTTP 400 Bad Request
+    }
+
+    @Test
+    void shouldVerifyVisitRepositoryCalled() throws Exception {
+        // Given
+        given(visitRepository.findByPetIdIn(asList(321))).willReturn(List.of());
+
+        // When
+        mvc.perform(get("/pets/visits?petId=321"))
+            .andExpect(status().isOk());
+
+        // Then - Verify that the repository method was called
+        verify(visitRepository).findByPetIdIn(asList(321));
+    }
+
+    @Test
+    void shouldCreateVisitSuccessfully() throws Exception {
+        Visit visit = Visit.VisitBuilder.aVisit().id(10).petId(123).build();
+        given(visitRepository.save(visit)).willReturn(visit);
+
+        mvc.perform(post("/owners/*/pets/123/visits")
+            .contentType(MediaType.APPLICATION_JSON)
+            .content("{\"id\": 10, \"petId\": 123}"))
+            .andExpect(status().isCreated());
     }
 }
